@@ -4,36 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_DiversionRight_Data_TableModel - Table model for displaying data 
-//	in the diversion right data tables.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-//
-// 2005-03-30	J. Thomas Sapienza, RTi	Initial version.
-// 2007-04-27	Kurt Tometich, RTi		Added getValidators method for check
-//									file and data check implementation.
-// 2007-03-01	SAM, RTi		Clean up code based on Eclipse feedback.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -240,8 +226,8 @@ public Object getValueAt(int row, int col) {
 		case COL_RIGHT_NAME:	return dr.getName();
 		case COL_STRUCT_ID:	return dr.getCgoto();
 		case COL_ADMIN_NUM:	return dr.getIrtem();
-		case COL_DCR_AMT:	return new Double(dr.getDcrdiv());
-		case COL_ON_OFF:	return new Integer(dr.getSwitch());
+		case COL_DCR_AMT:	return Double.valueOf(dr.getDcrdiv());
+		case COL_ON_OFF:	return Integer.valueOf(dr.getSwitch());
 		default:	return "";
 	}
 }
