@@ -4,34 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_Network_AnnotationProperties_JDialog - class to display and edit
-// 	annotation properties for a node in the diagram display.
-// ----------------------------------------------------------------------------
-//  Copyright:	See the COPYRIGHT file.
-// ----------------------------------------------------------------------------
-// History:
-// 2004-07-12	J. Thomas Sapienza, RTi	Initial version from
-//					HydroBase_GUI_WISDiagramNodeProperties.
-// 2007-03-01	SAM, RTi		Clean up code based on Eclipse feedback.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -451,7 +439,7 @@ private boolean validateData() {
 	// make sure the X value is a double and that it is within the range
 	// of the X values in the data limits
 	try {
-		x = (new Double(__xTextField.getText().trim())).doubleValue();
+		x = Double.valueOf(__xTextField.getText().trim()).doubleValue();
 		if (x < limits.getLeftX() || x > limits.getRightX()) {
 			badX = true;
 		}
@@ -472,7 +460,7 @@ private boolean validateData() {
 	// make sure the Y value is a double and that it is within the range
 	// of the Y values in the data limits
 	try {
-		y = (new Double(__yTextField.getText().trim())).doubleValue();
+		y = Double.valueOf(__yTextField.getText().trim()).doubleValue();
 		if (y < limits.getBottomY() || y > limits.getTopY()) {
 			badY = true;
 		}
@@ -506,7 +494,7 @@ private boolean validateData() {
 	boolean badFontSize = false;
 	int size = 0;
 	try {
-		size = (new Integer(__fontSizeTextField.getText().trim())).intValue();
+		size = Integer.valueOf(__fontSizeTextField.getText().trim()).intValue();
 	}
 	catch (Exception e) {
 		badFontSize = true;
