@@ -4,41 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_RiverNetworkNode_Data_TableModel - table model for displaying reservoir 
-//	data
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-// 2003-08-18	J. Thomas Sapienza, RTi	Initial version.
-// 2004-01-22	JTS, RTi		Removed the row count column and 
-//					changed all the other column numbers.
-// 2004-10-28	SAM, RTi		Change setValueAt() to support sort.
-// 2007-01-07   Kurt Tometich, RTi
-//								Added new fields for the data model for
-//								RiverNetworkNode.  Added Downstream Node ID
-//								and Maximum Recharge Limit.  Formatted the
-//								fields to match other commands.
-// ----------------------------------------------------------------------------
-// EndHeader
 
 package DWR.StateMod;
 
@@ -205,7 +186,7 @@ public Object getValueAt(int row, int col) {
 		case COL_NAME:	return r.getName();
 		case COL_COMMENT: return r.getComment();
 		case COL_CSTADN:	return r.getCstadn();
-		case COL_GWMAXR:	return new Double(r.getGwmaxr());
+		case COL_GWMAXR:	return Double.valueOf(r.getGwmaxr());
 		default:	return "";
 	}
 }
