@@ -4,53 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_Well_TableModel - Table model for displaying data for well station
-//	tables
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-// 2003-06-09	J. Thomas Sapienza, RTi	Initial version.
-// 2003-06-10	JTS, RTi		* Added 'right' fields.
-//					* Added 'return flow' fields.
-// 2003-07-29	JTS, RTi		JWorksheet_RowTableModel changed to
-//					JWorksheet_AbstractRowTableModel.
-// 2003-08-29	Steven A. Malers, RTi	Update for changes in StateMod_Well.
-// 2003-10-13	JTS, RTi		Removed references to parent well.
-// 2004-01-22	JTS, RTi		Removed the row count column and 
-//					changed all the other column numbers.
-// 2004-10-28	SAM, RTi		Split out well right code into a
-//					separate table model.  Use the generic
-//					StateMod_ReturnFlow_TableModel for
-//					return flows and depletions.
-//					Also add tool tips.
-// 2004-10-28	SAM, RTi		Change setValueAt() to support sort.
-// 2005-01-18	JTS, RTi		Added columns beyond just ID and name.
-// 2005-01-20	JTS, RTi		Following review:
-//					* Added new columns.
-//					* Changed column order.
-// 2006-04-11	JTS, RTi		Corrected the classes returned from
-//					getColumnClass().
-// 2007-03-01	SAM, RTi		Clean up code based on Eclipse feedback.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -379,33 +348,33 @@ public Object getValueAt(int row, int col) {
 		case COL_DAILY_ID:	
 			return well.getCdividyw();
 		case COL_CAPACITY:	
-			return new Double(well.getDivcapw());
+			return Double.valueOf(well.getDivcapw());
 		case COL_DIVERSION_ID:
 			return well.getIdvcow2();
 		case COL_DEMAND_TYPE:
-			return new Integer(well.getIdvcomw());
+			return Integer.valueOf(well.getIdvcomw());
 		case COL_EFF_ANNUAL:
-			return new Double(well.getDivefcw());
+			return Double.valueOf(well.getDivefcw());
 		case COL_AREA:
-			return new Double(well.getAreaw());
+			return Double.valueOf(well.getAreaw());
 		case COL_USE_TYPE:
-			return new Integer(well.getIrturnw());
+			return Integer.valueOf(well.getIrturnw());
 		case COL_DEMAND_SOURCE:
-			return new Integer(well.getDemsrcw());
+			return Integer.valueOf(well.getDemsrcw());
 		case COL_PRIMARY:	
-			return new Double(well.getPrimary());
-		case COL_EFF_01:	return new Double(well.getDiveff(0));
-		case COL_EFF_02:	return new Double(well.getDiveff(1));
-		case COL_EFF_03:	return new Double(well.getDiveff(2));
-		case COL_EFF_04:	return new Double(well.getDiveff(3));
-		case COL_EFF_05:	return new Double(well.getDiveff(4));
-		case COL_EFF_06:	return new Double(well.getDiveff(5));
-		case COL_EFF_07:	return new Double(well.getDiveff(6));
-		case COL_EFF_08:	return new Double(well.getDiveff(7));
-		case COL_EFF_09:	return new Double(well.getDiveff(8));
-		case COL_EFF_10:	return new Double(well.getDiveff(9));
-		case COL_EFF_11:	return new Double(well.getDiveff(10));
-		case COL_EFF_12:	return new Double(well.getDiveff(11));
+			return Double.valueOf(well.getPrimary());
+		case COL_EFF_01:	return Double.valueOf(well.getDiveff(0));
+		case COL_EFF_02:	return Double.valueOf(well.getDiveff(1));
+		case COL_EFF_03:	return Double.valueOf(well.getDiveff(2));
+		case COL_EFF_04:	return Double.valueOf(well.getDiveff(3));
+		case COL_EFF_05:	return Double.valueOf(well.getDiveff(4));
+		case COL_EFF_06:	return Double.valueOf(well.getDiveff(5));
+		case COL_EFF_07:	return Double.valueOf(well.getDiveff(6));
+		case COL_EFF_08:	return Double.valueOf(well.getDiveff(7));
+		case COL_EFF_09:	return Double.valueOf(well.getDiveff(8));
+		case COL_EFF_10:	return Double.valueOf(well.getDiveff(9));
+		case COL_EFF_11:	return Double.valueOf(well.getDiveff(10));
+		case COL_EFF_12:	return Double.valueOf(well.getDiveff(11));
 		default:	return "";
 	}
 }
