@@ -12,14 +12,12 @@ public class StateMod_ComponentDataCheckTest extends TestCase
 	//private RTi.Util.IO.CheckFile __check_file;
 	//private StateMod_DataSet __data_set;
 	
-public void setup() 
-{
+public void setup() {
 	//__check_file = new RTi.Util.IO.CheckFile("myCheckFile", "commands");
 	//__data_set = new StateMod_DataSet();
 }
 	
-public void testCheckForMissingData() 
-{
+public void testCheckForMissingData() {
 	// setup test object
 	//StateMod_ComponentDataCheck testObj = new StateMod_ComponentDataCheck(
 	//	StateMod_DataSet.COMP_WELL_STATIONS, __check_file, __data_set );
@@ -47,24 +45,23 @@ public void testCheckForMissingData()
 }
 
 
-private String[] getStringList( boolean missing )
-{
+private String[] getStringList( boolean missing ) {
 	Random generator = new Random( 19580427 );
 	if ( missing ) {
 		return new String[] { 
-			new Double(generator.nextDouble() * -1).toString(),
+			Double.valueOf(generator.nextDouble() * -1).toString(),
 			"",
-			new Double(generator.nextDouble() * -1).toString(),
-			new Integer(generator.nextInt()).toString(),
+			Double.valueOf(generator.nextDouble() * -1).toString(),
+			Integer.valueOf(generator.nextInt()).toString(),
 			""};
 	}
 	else {
 		return new String[] {
-			new Integer(generator.nextInt()).toString(),
+			Integer.valueOf(generator.nextInt()).toString(),
 			"Valid String",
-			new Double(generator.nextDouble()).toString(),
+			Double.valueOf(generator.nextDouble()).toString(),
 			"Another Valid String",
-			new Double(generator.nextDouble()).toString()};
+			Double.valueOf(generator.nextDouble()).toString()};
 	}
 }
 
